[gd_scene load_steps=10 format=3 uid="uid://cl1c5ipfnf66f"]

[ext_resource type="Theme" uid="uid://yqmay0cd53tl" path="res://themes/MetalPixelTheme4/MetalPixel.tres" id="1_o0xl2"]
[ext_resource type="Script" uid="uid://r26vig0m7xh8" path="res://scenes/MixingPane.gd" id="1_svtgx"]
[ext_resource type="PackedScene" uid="uid://fokn520phn5m" path="res://components/OrderDetails.tscn" id="3_cgagm"]
[ext_resource type="PackedScene" uid="uid://yrym8oofb8p4" path="res://components/MixerButtons.tscn" id="4_svtgx"]
[ext_resource type="PackedScene" uid="uid://cfvtyjrhh4cqx" path="res://components/BaseSelector.tscn" id="5_83n0o"]
[ext_resource type="PackedScene" uid="uid://bvhr2kpc3py1q" path="res://components/IngredientSelector.tscn" id="5_nyt5e"]
[ext_resource type="PackedScene" uid="uid://dhdwspygl8is8" path="res://scenes/ProductDetails.tscn" id="6_cgagm"]
[ext_resource type="PackedScene" uid="uid://loicby15dxae" path="res://scenes/ToolsPane.tscn" id="7_83n0o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fi2f3"]

[node name="MixingPane" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_svtgx")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o0xl2")

[node name="MixingWrapper" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.7
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 40.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="IngredientSelection" type="VBoxContainer" parent="MixingWrapper"]
layout_mode = 2

[node name="OrderDetails" parent="MixingWrapper/IngredientSelection" instance=ExtResource("3_cgagm")]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
fit_content = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="MixingWrapper/IngredientSelection"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_fi2f3")

[node name="MixerButtons" parent="MixingWrapper/IngredientSelection" instance=ExtResource("4_svtgx")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MixingWrapper/IngredientSelection"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_fi2f3")

[node name="BaseSelector" parent="MixingWrapper/IngredientSelection" instance=ExtResource("5_83n0o")]
layout_mode = 2

[node name="ProductDetails" parent="MixingWrapper" instance=ExtResource("6_cgagm")]
unique_name_in_owner = true
layout_mode = 2

[node name="ToolsPane" parent="." instance=ExtResource("7_83n0o")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
grow_horizontal = 0

[node name="IngredientSelector" parent="." instance=ExtResource("5_nyt5e")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 102.0
offset_right = 210.0
offset_bottom = 180.0
grow_horizontal = 1
grow_vertical = 1
horizontal_scroll_mode = 0
